--- a/index.html
+++ b/index.html
@@ -62,6 +62,17 @@
     <script src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js"></script>
   </head>
   <body class="bg-gray-100 p-4 md:p-8">
+    <script>
+      // Redirect to login if not authenticated
+      if (localStorage.getItem('orderforecast_auth') !== '1') {
+        window.location.href = 'login.html';
+      }
+    </script>
+    <!-- Logout Button -->
+    <div style="text-align:right; margin-bottom:1rem;">
+      <button onclick="localStorage.removeItem('orderforecast_auth');window.location.href='login.html'" style="background:#ef4444;color:#fff;padding:0.5rem 1rem;border:none;border-radius:0.375rem;cursor:pointer;">Logout</button>
+    </div>
+
     <!-- Loading Indicator -->
     <div
       id="loading-overlay"
