Implement OrderForecast system with enhanced visualization features, CRM integration, and improved UI

--- a/login.html
+++ b/login.html
@@ -79,6 +79,8 @@
         <button type="submit" class="login-btn">Login</button>
       </form>
     </div>
+    <!-- Debug utility for logging -->
+    <script src="utils/debugLog.js"></script>
     <script src="login.js"></script>
   </body>
 </html>
